--- a/Sticky Navbar CSS/index.html
+++ b/Sticky Navbar CSS/index.html
@@ -4,7 +4,7 @@
 	<title>Sticky Navbar CSS</title>
 	<link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script
 	src="https://code.jquery.com/jquery-3.4.1.js"
 	integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
